# sl-cmd

./: Cargo.toml  README.md  cmd.rs  wapm.toml
